--- a/app/partials/form.tpl.html
+++ b/app/partials/form.tpl.html
@@ -37,10 +37,9 @@
             <p><span>Country:</span> ${{searchItem.country}}</p>
 
             <p><span>Release date:</span> {{searchItem.releaseDate}}</p>
-            <a href="{{searchItem.artistViewUrl}}">
+            <a href="{{searchItem.artistViewUrl}}" target="_blank">
                 <div class="btn btn-primary btn-sm">More...</div>
             </a>
-            <i class="fa fa-thumbs-up"></i>
         </div>
     </div>
 
