--- a/app/css/app.css
+++ b/app/css/app.css
@@ -56,13 +56,9 @@ h2, form {
     padding: 4px;
     flex-basis: 150px;
     position: relative;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-}
-
-.content__item .fa {
-    display: none;
+    /*display: flex;*/
+    /*flex-flow: column nowrap;*/
+    /*justify-content: space-between;*/
 }
 
 .content__item p {
@@ -75,16 +71,19 @@ h2, form {
     font: 700 8pt "Ubuntu";
 }
 
-.content__item:hover .fa {
+.content__item:hover:after {
     /*display: inline-block;*/
+    content: 'Like';
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     background: rgba(200,200,200, .4);
     font: 600 26pt "Helvetica Neue";
-    color: rgba( 10, 10 ,10, .8 );
+    color: rgba( 10, 10 ,10, .7 );
     text-align: center;
     /*line-height: 250px;*/
     padding-top: calc( (100%/2) - 4px);
