--- a/app/partials/saves.tpl.html
+++ b/app/partials/saves.tpl.html
@@ -3,16 +3,25 @@
 
     <div class="items-amount">{{storageLength}}</div>
     <div ng-show="saves.hasItems" class="content">
-        <div ng-click="saves.deleteItem($index)" class="content__item" ng-repeat="searchItem in saves.results track by $index">
-            <p><span>Title:</span> {{searchItem.title}}</p>
+        <article class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in saves.results track by $index">
+            <figure>
+                <a href="{{searchItem.url}}">
+                    <img src="{{searchItem.multimedia[3].url}}" width="{{searchItem.multimedia[3].width}}" height="{{searchItem.multimedia[3].height}}" alt=""/>
+                </a>
+                <figcaption>
+                    <span class="figcaption-text">{{searchItem.multimedia[3].caption}}</span>
+                    <span class="copyright">{{searchItem.multimedia[3].copyright}}</span>
+                </figcaption>
+            </figure>
+            <h2 ng-click="saves.getSpecificArticle( searchItem.url )" class="article__heading">{{searchItem.title}}</h2>
 
-            <img src="{{searchItem.multimedia[3].url}}" width="{{searchItem.multimedia[3].width}}" height="{{searchItem.multimedia[3].height}}" alt=""/>
-            <span>{{searchItem.multimedia[3].caption}}"</span>
+            <p class="byline">{{searchItem.byline}}<span class="publish-date">{{searchItem.published_date}}</span></p>
+
             <p>{{searchItem.abstract}}</p>
 
             <a href="{{searchItem.artistViewUrl}}" target="_blank">
                 <div class="btn btn-primary btn-sm">More...</div>
             </a>
-        </div>
+        </article>
     </div>
 </div>
