--- a/app/css/app.css
+++ b/app/css/app.css
@@ -30,6 +30,7 @@ h2, form {
 }
 
 .nyt {
+    display: block;
     margin: 0 auto;
 }
 
@@ -120,12 +121,20 @@ h2, form {
     background: #03A9F4;
 }
 
+.results-length {
+    width: 960px;
+    margin: 0 auto;
+    text-align: right;
+    font: 600 13pt "Ubuntu";
+    color: darkgrey;
+}
+
 /* ----------- respond results -----------------*/
 .content {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: flex-start;
     align-items: flex-start;
 
