--- a/app/partials/saves.tpl.html
+++ b/app/partials/saves.tpl.html
@@ -1,27 +1,20 @@
 <div class="view likes__">
-    <h2>Favourite artists:</h2>
+    <h2>My favourites:</h2>
 
     <div class="items-amount">{{storageLength}}</div>
     <div ng-show="saves.hasItems" class="content">
-        <article class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in saves.results track by $index">
-            <figure>
-                <a href="{{searchItem.url}}">
-                    <img src="{{searchItem.multimedia[3].url}}" width="{{searchItem.multimedia[3].width}}" height="{{searchItem.multimedia[3].height}}" alt=""/>
-                </a>
-                <figcaption>
-                    <span class="figcaption-text">{{searchItem.multimedia[3].caption}}</span>
-                    <span class="copyright">{{searchItem.multimedia[3].copyright}}</span>
-                </figcaption>
-            </figure>
-            <h2 ng-click="saves.getSpecificArticle( searchItem.url )" class="article__heading">{{searchItem.title}}</h2>
-
-            <p class="byline">{{searchItem.byline}}<span class="publish-date">{{searchItem.published_date}}</span></p>
-
-            <p>{{searchItem.abstract}}</p>
-
-            <a href="{{searchItem.artistViewUrl}}" target="_blank">
-                <div class="btn btn-primary btn-sm">More...</div>
+        <article class="content__article edit" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in saves.results track by $index">
+            <a href="{{searchItem.web_url}}" ng-if="searchItem.multimedia[0]">
+                <img src="{{news.nyt_domain + searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>
             </a>
+
+            <h2 class="article__heading">{{searchItem.headline.main}}</h2>
+
+            <p class="byline">{{searchItem.byline.original}}<span class="update-date"> {{news.parseDate(searchItem.pub_date)}}</span></p>
+
+            <p class="summary">{{searchItem.lead_paragraph}}</p>
+
+            <span class="hashtag" ng-repeat="key in searchItem.keywords">#{{key.value}} </span>
         </article>
     </div>
 </div>
