--- a/app/partials/form.tpl.html
+++ b/app/partials/form.tpl.html
@@ -9,10 +9,10 @@
     <div loader></div>
 
 
-    <form class="form form-inline">
+    <form class="form form-inline grid-960">
         <div class="form__search">
             <label class="form__search_label">
-                <input type="search" class="form-control" ng-model="news.formSearch" placeholder="Find Article"/>
+                <input autofocus type="search" class="form-control" ng-model="news.formSearch" placeholder="Find Article"/>
             </label>
 
             <button ng-click="news.getSearchResult()" type="button" class="btn-search btn btn-primary">
@@ -40,23 +40,22 @@
 
     <div class="content">
         <!--<article ng-show="news.searchResultView" class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">-->
-            <!--<figure>-->
-                <!--<a class="thumb" href="{{searchItem.url}}">-->
-                    <!--<img src="{{searchItem.multimedia[2].url}}" width="{{searchItem.multimedia[2].width}}" height="{{searchItem.multimedia[2].height}}" alt=""/>-->
-                <!--</a>-->
-                <!--<figcaption>-->
-                    <!--<span class="figcaption-text">{{searchItem.multimedia[3].caption}}</span>-->
-                    <!--<span class="copyright">{{searchItem.multimedia[3].copyright}}</span>-->
-                <!--</figcaption>-->
-            <!--</figure>-->
 
-            <!--<h2 class="article__heading">{{searchItem.title}}</h2>-->
+            <!--<a href="{{searchItem.web_url}}" ng-if="searchItem.multimedia[0]">-->
+                <!--<img src="{{news.nyt_domain + searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>-->
+            <!--</a>-->
 
-            <!--<p class="byline">{{searchItem.byline}}<span class="update-date"> {{news.parseDate(searchItem.updated_date)}}</span></p>-->
+            <!--<h2 class="article__heading">{{searchItem.headline.main}}</h2>-->
 
-            <!--<p class="summary">{{searchItem.abstract}}</p>-->
+            <!--<p class="byline">{{searchItem.byline.original}}<span class="update-date"> {{news.parseDate(searchItem.pub_date)}}</span></p>-->
+
+            <!--<p class="summary">{{searchItem.lead_paragraph}}</p>-->
+
+            <!--<span class="hashtag" ng-repeat="key in searchItem.keywords">#{{key.value}} </span>-->
 
         <!--</article>-->
+
+        <!-- Newswires rendering -->
 
         <article class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">
 
