--- a/app/less/main.less
+++ b/app/less/main.less
@@ -174,6 +174,7 @@ h2, form {
     position: relative;
     background: #fff;
     font: 400 12pt "Ubuntu";
+    transition: all 0.3s ease;
 
     &:hover {
       opacity: 0.8;
@@ -244,21 +245,21 @@ h2, form {
   }
 }
 
-.content__article:hover.edit:before {
-  position: absolute;
-  display: inline-block;
-  margin: 5px;
-  content: '';
-  width: 50px;
-  height: 50px;
-  top: 0;
-  right: 0;
-  background: url(../img/icon-edit.png), rgba(255,255,255, .8);
-  background-position: center center;
-  background-repeat: no-repeat;
-  z-index: 3;
-  cursor: pointer;
-}
+//.content__article:hover.edit:before {
+//  position: absolute;
+//  display: inline-block;
+//  margin: 5px;
+//  content: '';
+//  width: 50px;
+//  height: 50px;
+//  top: 0;
+//  right: 0;
+//  background: url(../img/icon-edit.png), rgba(255,255,255, .8);
+//  background-position: center center;
+//  background-repeat: no-repeat;
+//  z-index: 3;
+//  cursor: pointer;
+//}
 
 footer {
   font: 400 9pt "Ubuntu";
@@ -271,9 +272,6 @@ footer {
 
 //---------------- Bookmarks page-----------------
 
-.likes__ .content__article:hover:after {
-  display: none;
-}
 
 .items-amount {
   position: absolute;
