--- a/app/partials/form.tpl.html
+++ b/app/partials/form.tpl.html
@@ -39,38 +39,41 @@
     <div class="results-length" ng-show="news.searchResultView" >{{20}} of about {{news.resultsLength}}</div>
 
     <div class="content">
-        <!--<article ng-show="news.searchResultView" class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">-->
+        <article ng-show="news.searchResultView" class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">
 
-            <!--<a href="{{searchItem.web_url}}" ng-if="searchItem.multimedia[0]">-->
-                <!--<img src="{{news.nyt_domain + searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>-->
-            <!--</a>-->
+            <a href="{{searchItem.web_url}}" ng-if="searchItem.multimedia[0]">
+                <img src="{{news.nyt_domain + searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>
+            </a>
 
-            <!--<h2 class="article__heading">{{searchItem.headline.main}}</h2>-->
+            <h2 class="article__heading">{{searchItem.headline.main}}</h2>
 
-            <!--<p class="byline">{{searchItem.byline.original}}<span class="update-date"> {{news.parseDate(searchItem.pub_date)}}</span></p>-->
+            <p class="byline">{{searchItem.byline.original}}<span class="update-date"> {{news.parseDate(searchItem.pub_date)}}</span></p>
 
-            <!--<p class="summary">{{searchItem.lead_paragraph}}</p>-->
+            <p class="summary">{{searchItem.lead_paragraph}}</p>
 
-            <!--<span class="hashtag" ng-repeat="key in searchItem.keywords">#{{key.value}} </span>-->
+            <span class="hashtag" ng-repeat="key in searchItem.keywords">#{{key.value}} </span>
 
-        <!--</article>-->
+        </article>
 
         <!-- Newswires rendering -->
 
-        <article class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">
+        <!--<article class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">-->
 
-            <a class="thumb" href="{{searchItem.url}}">
-                <img src="{{searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>
-            </a>
+            <!--<a class="thumb" href="{{searchItem.url}}">-->
+                <!--<img src="{{searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>-->
+            <!--</a>-->
 
-            <h2 class="article__heading">{{searchItem.title}}</h2>
+            <!--<h2 class="article__heading">{{searchItem.title}}</h2>-->
 
-            <p class="byline">{{searchItem.byline}}<span class="update-date"> {{news.parseDate(searchItem.updated_date)}}</span></p>
+            <!--<p class="byline">{{searchItem.byline}}<span class="update-date"> {{news.parseDate(searchItem.updated_date)}}</span></p>-->
 
-            <p class="summary">{{searchItem.abstract}}</p>
+            <!--<p class="summary">{{searchItem.abstract}}</p>-->
 
-        </article>
+        <!--</article>-->
 
     </div>
 
 </div>
+
+<!-- http://jsfiddle.net/timriley/GVCP2/ -->
+<!-- http://jsfiddle.net/cn8VF/308/ -->
