--- a/app/less/main.less
+++ b/app/less/main.less
@@ -205,6 +205,7 @@ h2, form {
     }
 
     .byline {
+      display: inline-block;
       font-size: 11px;
       line-height: 14px;
       color: #808080;
@@ -228,6 +229,7 @@ h2, form {
     }
 
     .update-date {
+      display: block;
       margin-left: 3px;
       color: #a81817;
       font-size: 11px;
