--- a/app/css/main.css
+++ b/app/css/main.css
@@ -19,6 +19,12 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+.nav,
+.pagination,
+.carousel,
+.pannel-title a {
+  cursor: pointer;
+}
 .view {
   display: -webkit-box;
   display: -webkit-flex;
@@ -204,6 +210,8 @@ form {
       -ms-flex-preferred-size: 32%;
           flex-basis: 32%;
   height: 100%;
+  max-height: 250px;
+  overflow: hidden;
   position: relative;
   background: #fff;
   font: 400 12pt "Ubuntu";
