--- a/app/less/main.less
+++ b/app/less/main.less
@@ -15,6 +15,10 @@ body {
   justify-content: space-between;
 }
 
+.nav, .pagination, .carousel, .pannel-title a {
+  cursor: pointer;
+}
+
 .view {
   display: flex;
   flex-direction: column;
@@ -171,6 +175,8 @@ h2, form {
     padding: 8px;
     flex-basis: 32%;
     height: 100%;
+      max-height: 250px;
+      overflow: hidden;
     position: relative;
     background: #fff;
     font: 400 12pt "Ubuntu";
