--- a/app/partials/form.tpl.html
+++ b/app/partials/form.tpl.html
@@ -6,7 +6,7 @@
                 <input autofocus type="search" class="form-control" ng-model="news.formSearch" placeholder="Find Article"/>
             </label>
 
-            <button ng-click="news.getSearchResult()" type="button" class="btn-search btn btn-primary">
+            <button ng-click="news.getSearchResult()" type="submit" class="btn-search btn btn-primary">
             Submit Form
             </button>
 
@@ -27,7 +27,7 @@
 
     </form>
 
-    <div class="results-length" ng-show="news.searchResultView" >{{20}} of about {{news.resultsLength}}</div>
+    <div class="results-length" ng-show="news.resultLengthEnabled" >{{ (news.resultsLength > 20) ? 20 : news.resultsLength }} of about {{news.resultsLength}}</div>
 
     <div class="content">
         <article ng-show="news.searchResultView" class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">
@@ -49,21 +49,24 @@
 
         <!-- Newswires rendering -->
 
-        <!--<article class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">-->
+        <article ng-hide="news.searchResultView" class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">
 
-            <!--<a class="thumb" href="{{searchItem.url}}">-->
-                <!--<img src="{{searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>-->
-            <!--</a>-->
+            <a class="thumb" href="{{searchItem.url}}">
+                <img src="{{searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>
+            </a>
 
-            <!--<h2 class="article__heading">{{searchItem.title}}</h2>-->
+            <h2 class="article__heading">{{searchItem.title}}</h2>
 
-            <!--<p class="byline">{{searchItem.byline}}<span class="update-date"> {{news.parseDate(searchItem.updated_date)}}</span></p>-->
+            <p class="byline">{{searchItem.byline}}<span class="update-date"> {{news.parseDate(searchItem.updated_date)}}</span></p>
 
-            <!--<p class="summary">{{searchItem.abstract}}</p>-->
+            <p class="summary">{{searchItem.abstract}}</p>
 
-        <!--</article>-->
+        </article>
+
+        <uib-pagination ng-show="news.resultLengthEnabled" ng-change="news.pagination.setPage()" total-items="news.pagination.totalItems" ng-model="news.pagination.currentPage" class="pagination-md" items-per-page="{{news.searchResultView ? 10 : 20 }}" max-size="12" boundary-links="true"></uib-pagination>
 
     </div>
+
 
 </div>
 
