--- a/app/less/main.less
+++ b/app/less/main.less
@@ -69,6 +69,10 @@ h2, form {
   margin: 0 auto;
 }
 
+.pagination-md {
+  margin: 15px auto;
+}
+
 .top-navbar {
   width: 60%;
   margin: 0 auto;
@@ -175,8 +179,8 @@ h2, form {
     padding: 8px;
     flex-basis: 32%;
     height: 100%;
-      max-height: 250px;
-      overflow: hidden;
+      //max-height: 250px;
+      //overflow: hidden;
     position: relative;
     background: #fff;
     font: 400 12pt "Ubuntu";
