--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,10 +3,14 @@ html {
   height: 100%;
 }
 body {
-  background: url('../img/bg-10-full.jpg');
+  position: relative;
+  background: url('../img/bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
   background-attachment: fixed;
+  background-size: cover;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -18,6 +22,19 @@ body {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  z-index: -2;
+}
+body:after {
+  position: absolute;
+  display: block;
+  content: '';
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  min-height: 100%;
+  background: rgba(255, 255, 255, 0.25);
+  z-index: -1;
 }
 .nav,
 .pagination,
@@ -50,7 +67,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #717D8C;
+  background: black;
   opacity: 0.25;
 }
 .three-dots-row-spinner {
@@ -68,17 +85,14 @@ form {
 .nyt {
   display: block;
   margin: 0 auto;
-}
-.get_id {
-  display: inline-block;
-  width: 500px;
-}
-.user_id {
-  font: 600 13pt "Lucida Console";
+  zoom: 0.35;
 }
 .grid-960 {
   width: 960px;
   margin: 0 auto;
+}
+.pagination-md {
+  margin: 15px auto;
 }
 .top-navbar {
   width: 60%;
@@ -109,19 +123,21 @@ form {
   width: 100%;
 }
 .form__search input[type=search] {
-  width: 100%;
+  width: 79%;
 }
 .form__search .form__search_label {
-  padding: 10px 15px;
+  padding: 10px 10px;
   border-radius: 5px;
   background: #ffffff;
-  width: 75%;
+  width: 100%;
+  background: rgba(112, 122, 122, 0.5);
 }
 .form__search .btn-search {
-  padding: 10px 15px;
+  margin-left: 1%;
+  padding: 4px 15px;
   border-radius: 5px;
-  width: 24%;
-  font-size: 15pt;
+  width: 19%;
+  font-size: 13pt;
   -webkit-align-self: baseline;
       -ms-flex-item-align: baseline;
           align-self: baseline;
@@ -210,8 +226,6 @@ form {
       -ms-flex-preferred-size: 32%;
           flex-basis: 32%;
   height: 100%;
-  max-height: 250px;
-  overflow: hidden;
   position: relative;
   background: #fff;
   font: 400 12pt "Ubuntu";
