--- a/app/less/main.less
+++ b/app/less/main.less
@@ -6,13 +6,31 @@ html {
 }
 
 body {
-  background: url('../img/bg-10-full.jpg');
+  position: relative;
+  background:  url('../img/bg.jpg');
+  background-repeat:  no-repeat;
+  background-position: center center;
   background-attachment: fixed;
+  background-size: cover;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  z-index: -2;
+
+  &:after {
+    position: absolute;
+    display: block;
+    content: '';
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    min-height: 100%;
+    background: rgba(255, 255, 255, .25);
+    z-index: -1;
+  }
 }
 
 .nav, .pagination, .carousel, .pannel-title a {
@@ -33,7 +51,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #717D8C;
+  background: black;
   opacity: 0.25;
 }
 
@@ -53,15 +71,7 @@ h2, form {
 .nyt {
   display: block;
   margin: 0 auto;
-}
-
-.get_id {
-  display: inline-block;
-  width: 500px;
-}
-
-.user_id {
-  font: 600 13pt "Lucida Console";
+  zoom: 0.35;
 }
 
 .grid-960 {
@@ -94,21 +104,23 @@ h2, form {
   width: 100%;
 
   input[type=search] {
-    width: 100%;
+    width: 79%;
   }
 
   .form__search_label {
-    padding: 10px 15px;
+    padding: 10px 10px;
     border-radius: 5px;
     background: #ffffff;
-    width: 75%;
+    width: 100%;
+    background: rgba(112,122,122, .5);
   }
 
   .btn-search {
-    padding: 10px 15px;
+    margin-left: 1%;
+    padding: 4px 15px;
     border-radius: 5px;
-    width: 24%;
-    font-size: 15pt;
+    width: 19%;
+    font-size: 13pt;
     align-self: baseline;
   }
 }
