--- a/app/partials/form.tpl.html
+++ b/app/partials/form.tpl.html
@@ -4,11 +4,13 @@
         <div class="form__search">
             <label class="form__search_label">
                 <input autofocus type="search" class="form-control" ng-model="news.formSearch" placeholder="Find Article"/>
+
+                <button ng-click="news.getSearchResult()" type="submit" class="btn-search btn btn-primary">
+                    Search Article
+                </button>
             </label>
 
-            <button ng-click="news.getSearchResult()" type="submit" class="btn-search btn btn-primary">
-            Submit Form
-            </button>
+
 
         </div>
 
@@ -32,8 +34,8 @@
     <div class="content">
         <article ng-show="news.searchResultView" class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">
 
-            <a href="{{searchItem.web_url}}" ng-if="searchItem.multimedia[0]">
-                <img src="{{news.nyt_domain + searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>
+            <a href="{{searchItem.web_url}}" ng-if="news.pickImage(searchItem.multimedia, 'wide')">
+                <img src="{{news.nyt_domain + news.pickImage(searchItem.multimedia, 'wide').url}}" width="{{news.pickImage(searchItem.multimedia, 'wide').width}}" height="{{news.pickImage(searchItem.multimedia, 'wide').height}}" alt=""/>
             </a>
 
             <h2 class="article__heading">{{searchItem.headline.main}}</h2>
@@ -52,7 +54,7 @@
         <article ng-hide="news.searchResultView" class="content__article" ng-click="addToSaves(searchItem)" ng-repeat="searchItem in news.results">
 
             <a class="thumb" href="{{searchItem.url}}">
-                <img src="{{searchItem.multimedia[0].url}}" width="{{searchItem.multimedia[0].width}}" height="{{searchItem.multimedia[0].height}}" alt=""/>
+                <img src="{{news.pickImage(searchItem.multimedia, 'thumbnail').url}}" width="{{news.pickImage(searchItem.multimedia, 'thumbnail').width}}" height="{{news.pickImage(searchItem.multimedia, 'thumbnail').height}}" alt=""/>
             </a>
 
             <h2 class="article__heading">{{searchItem.title}}</h2>
