--- a/app/less/main.less
+++ b/app/less/main.less
@@ -294,6 +294,13 @@ footer {
   }
 }
 
+.top {
+  position: fixed;
+  right: 100px;
+  bottom: 100px;
+  background: rgba(112,122,122, .6);
+}
+
 //---------------- Bookmarks page-----------------
 
 
