--- a/app/less/main.less
+++ b/app/less/main.less
@@ -5,6 +5,10 @@ html {
   height: 100%;
 }
 
+*[ng-cloak] {
+  display: none !important;
+}
+
 body {
   position: relative;
   background:  url('../img/bg.jpg');
@@ -360,6 +364,45 @@ footer {
 @media screen and (max-width: 980px) {
   .content {
     width: 100%;
+  }
+}
+
+md-toolbar .md-toolbar-tools {
+
+
+  md-button {
+    width: 50px;
+    height: 50px;
+
+    md-icon {
+      width: 36px;
+      height: 36px;
+    }
+
+    .md-ripple-container {
+      width: 50px;
+      height: 50px;
+    }
+  }
+
+  a {
+    margin-left: auto;
+    img {
+      zoom: 0.15;
+    }
+  }
+}
+
+.menu__item {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-content: center;
+  width: 100%;
+
+  p {
+    text-align: left;
+    text-transform: uppercase;
   }
 }
 
